--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,8 @@ body{
 
 nav, nav ul li{
    display: inline-block;
-   margin:5px
+   margin:5px;
+   font-style: oblique;
 }
 
 #banner{
@@ -70,4 +71,10 @@ nav, nav ul li{
 .layout-image{
    background-color:rgb(240, 240, 240);
    margin-bottom:15px ;
+   padding-top: 20px;
+   padding-bottom: 20px;
+}
+
+.layout-image img{
+   width: 150px;
 }
